Adds a github action for install perl deps from cpanm

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install perl dependencies
+        uses: perl-actions/install-with-cpanm@v1.1
         run: make install_deps
 
       - name: Run tests for library
