CI fix: a step cannot have both the  and  keys

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -19,7 +19,9 @@ jobs:
 
       - name: Install perl dependencies
         uses: perl-actions/install-with-cpanm@v1.1
-        run: make install_deps
+        with:
+          cpanfile: "cpanfile"
+          sudo: false
 
       - name: Run tests for library
         run: make test
