--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -1,3 +1,4 @@
+# Borrows references from https://github.com/marketplace/actions/install-with-cpanm
 name: CI
 
 # Run this action whenever one pushes to repository or creates a pull request
@@ -13,6 +14,18 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
+    name: "perl v${{ matrix.perl-version }}"
+
+    strategy:
+      fail-fast: false
+      matrix:
+        perl-version:
+          - "5.30"
+          - "5.28"
+          - "5.26"
+
+    container:
+      image: perldocker/perl-tester:${{ matrix.perl-version }}
 
     steps:
       - uses: actions/checkout@v2
