Adds small test for docker-compose

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -29,6 +29,9 @@ jobs:
           cpanfile: "cpanfile"
           sudo: false
 
+      - name: Test docker-compose
+        run: docker-compose -v
+
       - name: Run tests for library
         run: make test
 
