--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -29,8 +29,12 @@ jobs:
           cpanfile: "cpanfile"
           sudo: false
 
-      - name: Test docker
-        run: docker -v
+      - name: Setup docker compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+          docker-compose -v
 
       - name: Run tests for library
         run: make test
