--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -19,6 +19,13 @@ jobs:
     container:
       image: perldocker/perl-tester:${{ matrix.perl-version }}
 
+    services:
+      faktory:
+        image: contribsys/faktory:latest
+        ports:
+          - 7419:7419
+          - 7420:7420
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -28,13 +35,6 @@ jobs:
         with:
           cpanfile: "cpanfile"
           sudo: false
-
-      - name: Setup docker compose
-        run: |
-          curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          chmod +x /usr/local/bin/docker-compose
-          ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
-          docker-compose -v
 
       - name: Run tests for library
         run: make tests
