--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -36,7 +36,15 @@ jobs:
           cpanfile: "cpanfile"
           sudo: false
 
-      - name: "Test to see if faktory server is running"
+      - name: Setup docker compose and run Faktory
+        run: |
+          curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          chmod +x /usr/local/bin/docker-compose
+          ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+          docker-compose -v
+          docker-compose -f docker-compose.yml up
+
+      - name: Test to see if faktory server is running
         run: "curl --verbose --silent --output /dev/null http://localhost:${{ job.services.faktory.ports['7420'] }}"
 
       - name: Run tests for library
